# semantic-search

./: package-lock.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: chat.rs  embedding.rs  file_utils.rs  indexer.rs  mod.rs  search.rs  settings.rs
